<resources>
    <string name="app_name">Página Athletic Club</string>
    <string name="athletic">ATHLETIC CLUB</string>
    <string name="jugadores">JUGADORES</string>
    <string name="tienda">TIENDA</string>
    <string name="volver">VOLVER</string>
    <string name="identificador">IDENTIFICADOR</string>
    <string name="nombre">NOMBRE</string>
    <string name="edad">EDAD</string>
    <string name="ciudad">CIUDAD</string>
    <string name="ingresar">INGRESAR </string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="email">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="registrar">REGISTRAR</string>
    <string-array name="opciones">
        <item>EQUIPACIÓN</item>
        <item>SUDADERAS</item>
        <item>GORRAS</item>
        <item>BANDERAS</item>
    </string-array>
    <string name="ir">IR</string>
    <string name="eleccion">SELECCIONE UN PRODUCTO Y SE LE DIRIGIRÁ A LA PÁGINA</string>
    <string name="equipacion">BIENVENIDO AL APARTADO DE LAS EQUIPACIONES</string>
    <string name="sudaderas">BIENVENIDO AL APARTADO DE LAS SUDADERAS</string>
    <string name="gorras">BIENVENIDO AL APARTADO DE LAS GORRAS</string>
    <string name="banderas">BIENVENIDO AL APARTADO DE LAS BANDERAS</string>
    <string name="salir">SALIR</string>
    <string name="comprar">COMPRAR</string>
    <string name="nombree">INTRODUZCA SU NOMBRE</string>
    <string name="direccion">INTRODUZCA SU DIRECCIÓN</string>
    <string name="niño">NIÑO</string>
    <string name="adulto">ADULTO</string>
    <string name="valoracion">¡¡VALÓRENOS!!</string>
    <string name="politica">POLÍTICA Y PRIVACIDAD</string>
    <string name="mensaje">GRACIAS POR REALIZAR EL PEDIDO</string>
    <string name="seguir">SEGUIR COMPRANDO</string>
    <string name="nuevo">NUEVO JUGADOR</string>
    <string name="bufalo">¡¡ PULSE SOBRE LA IMAGEN DE ASIER VILLALIBRE PARA INICIAR O DETENER EL SONIDO!!</string>
</resources>