<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperacionCompra"
    android:background="@color/red">

    <ImageButton
        android:id="@+id/firstImageButton"
        android:layout_width="144dp"
        android:layout_height="126dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/athletic_bilbao_logo__1__removebg_preview" />

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="191dp"
        android:layout_height="107dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/athletic"
        android:textAlignment="center"
        android:textColor="@color/newBlack"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eigthEditText"
        android:layout_width="264dp"
        android:layout_height="52dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="207dp"
        android:layout_height="98dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <RadioButton
            android:id="@+id/firstRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/niño" />

        <RadioButton
            android:id="@+id/secondRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adulto" />
    </RadioGroup>

    <Button
        android:id="@+id/button17"
        android:layout_width="177dp"
        android:layout_height="72dp"
        android:layout_marginStart="188dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/black"
        android:text="@string/comprar"
        android:onClick="goToCompraRealizada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ninthEditText"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/firstRatingBar"
        android:layout_width="246dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="156dp"
        android:numStars="5"
        android:rating="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/secondTextView"
        android:layout_width="264dp"
        android:layout_height="64dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="224dp"
        android:text="@string/valoracion"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/firstCheckBox"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="52dp"
        android:text="@string/politica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>