<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">


    <TextView
        android:id="@+id/viewIdentificador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identificador" />

    <EditText
        android:id="@+id/txtIdentificador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewIdentificador"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewNombre"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/viewEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edad" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewEdad"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="107dp" />

    <TextView
        android:id="@+id/viewCiuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad" />

    <EditText
        android:id="@+id/txtCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewCiuda"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="178dp" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="223dp" />

</LinearLayout>