<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".Tienda">

    <ImageButton
        android:id="@+id/firstImageButton"
        android:layout_width="144dp"
        android:layout_height="126dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/athletic_bilbao_logo__1__removebg_preview" />

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="191dp"
        android:layout_height="107dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/athletic"
        android:textAlignment="center"
        android:textColor="@color/newBlack"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="60dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="156dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fifthEditText"
        android:layout_width="268dp"
        android:layout_height="49dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="276dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sixthEditText"
        android:layout_width="268dp"
        android:layout_height="41dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="372dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/seventhEditText"
        android:layout_width="269dp"
        android:layout_height="47dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:textAlignment="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="69dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="@color/black"
        android:text="@string/registrar"
        android:onClick="Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="96dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/volver"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/secondImage"
        android:layout_width="46dp"
        android:layout_height="51dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="404dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user__1_" />

    <ImageView
        android:id="@+id/thirdImage"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/at__1_" />

    <ImageView
        android:id="@+id/fourthImage"
        android:layout_width="42dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="204dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/key__2_" />

</androidx.constraintlayout.widget.ConstraintLayout>