<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sudaderas"
    android:background="@color/red">
    <ImageButton
        android:id="@+id/firstImageButton"
        android:layout_width="144dp"
        android:layout_height="126dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/athletic_bilbao_logo__1__removebg_preview" />

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="191dp"
        android:layout_height="107dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/athletic"
        android:textAlignment="center"
        android:textColor="@color/newBlack"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="263dp"
        android:layout_height="99dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="464dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/sudaderas"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tenthButton"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/black"
        android:text="@string/comprar"
        android:onClick="goToOperacionCompra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eleventhButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/black"
        android:text="@string/comprar"
        android:onClick="goToOperacionCompra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image13"
        android:layout_width="178dp"
        android:layout_height="181dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sudadera___removebg_preview" />

    <ImageView
        android:id="@+id/image14"
        android:layout_width="189dp"
        android:layout_height="181dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/_dce6f34033d984f7ea8f848aed2_removebg_preview__1_" />

    <Button
        android:id="@+id/button12"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/volver"
        android:onClick="goToProductos"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>